test/ppx_expect/cases/match_4.expect
File "./match_4.ml", line 12, characters 4-16:
Error: This expression has type int Lwt.t
       but an expression was expected of type unit Lwt.t
       Type int is not compatible with type unit 
